@@ -5,7 +5,6 @@ parts =
     interpreter
     test
 versions = versions
-extensions = buildout.dumppickedversions
 
 [versions]
 grokcore.view =
